[package]
name = "the-caverns-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.0", features = ["wayland"] }
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable", "debug-render-2d"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier2d]
opt-level = 3
