[package]
name = "the_caverns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bevy = { version = "0.12.1", features = ["wayland"] }
bevy-persistent = { version = "0.4.2", features = ["pretty", "toml"] }
bevy_rapier2d = { version = "0.23.0", features = ["simd-stable", "debug-render-2d"] }
bevy_screen_diagnostics = "0.4.0"
futures = "0.3.29"
ldtk = { version = "0.4.1", features = ["download-schema"] }
ron = "0.8.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.108"
tiled = "0.11.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"
